[package]
name = "server"
version = "0.1.0"
authors = ["lanshibao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# tls-rustls = ["rustls", "webpki", "proto/tls-rustls"]

[workspace]
examples = true

[dependencies]
quinn = "0.6.1"
anyhow = "1.0.22"
tokio = { version = "0.2.6", features = ["io-util", "macros", "rt-threaded", "time", "fs"] }
tracing = "0.1.13"
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
directories = "2.0.2"
rcgen = "0.8.1"
futures = "0.3.1"
byteorder="*"

[[example]]
name = "client"
# required-features = ["tls-rustls"]